# SDLEngine

./: CMakeLists.txt
Source/: CMakeLists.txt
Source/SDLEngine/: CMakeLists.txt
Source/SDLEngine/Source/Core/: EngineCommon.h  GameLoop.cpp  GameLoop.h  SDLApp.cpp  SDLApp.h
Source/SDLEngine/Source/Render/: Renderer.cpp  Renderer.h
Source/Sandbox/: CMakeLists.txt
Source/Sandbox/Source/: Sandbox.cpp
